--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <% if user_signed_in? %>
-    <li>Hello <%= current_user.name %>!</li>
+    <li>Hello <%= current_user.username %>!</li>
     <li><%= link_to "My account", edit_user_registration_path %></li>
     <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
   <% else %>
@@ -8,4 +8,3 @@
     <li><%= link_to "Sign in", new_user_session_path %></li>
   <% end %>
 </ul>
-
