--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,10 @@
 <ul>
   <% if user_signed_in? %>
     <li>Hello <%= current_user.username %>!</li>
+    <% if current_user.admin? %>
+      <li><%= link_to "Questions", questions_path %></li>
+      <li><%= link_to "Demographic questions", demographic_questions_path %></li>
+    <% end %>
     <li><%= link_to "My account", edit_user_registration_path %></li>
     <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
   <% else %>
