--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -15,5 +15,15 @@
   <%= @survey.user %>
 </p>
 
+<hr>
+
+<h5>Responses</h5>
+
+<%= link_to "Take the survey", new_survey_response_path(@survey) %>
+
+<% @survey.responses.each do |response| %>
+  <%= link_to "#{response.id} - #{response.created_at.to_formatted_s(:long)}", survey_response_path(response) %>
+<% end %>
+
 <%= link_to 'Edit', edit_survey_path(@survey) %> |
 <%= link_to 'Back', surveys_path %>
