Added milligram and tweaked front end

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @survey.name %>
-</p>
+<h1><%= @survey.name %></h1>
 
 <p>
   <strong>Published:</strong>
@@ -12,19 +7,33 @@
 
 <p>
   <strong>User:</strong>
-  <%= @survey.user %>
+  <%= @survey.user.email %> (<%= @survey.user.organisation_name %>)
 </p>
+
+<%= link_to "Take the survey", new_survey_response_path(@survey), class: 'button' %>
+<%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
+<%= link_to 'Back', surveys_path, class: 'button' %>
 
 <hr>
 
-<h5>Responses</h5>
+<h2>Responses for this survey</h2>
 
-<%= link_to "Take the survey", new_survey_response_path(@survey) %>
 
-<% @survey.responses.each do |response| %>
-  <%= link_to "#{response.id} - #{response.created_at.to_formatted_s(:long)}", survey_response_path(@survey, response) %>
-  <%= link_to 'Destroy', survey_response_path(@survey, response), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<table>
+  <thead>
+    <th>ID</th>
+    <th>Created at</th>
+    <th colspan="2"></th>
+  </thead>
+  <tbody>
+    <% @survey.responses.each do |response| %>
+      <tr>
+        <td><%= response.id %></td>
+        <td><%= response.created_at.to_formatted_s(:short) %></td>
+        <td><%= link_to "Show", survey_response_path(@survey, response) %></td>
+        <td><%= link_to 'Destroy', survey_response_path(@survey, response), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to 'Edit', edit_survey_path(@survey) %> |
-<%= link_to 'Back', surveys_path %>
