--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
       <li><%= link_to "Questions", questions_path %></li>
       <li><%= link_to "Demographic questions", demographic_questions_path %></li>
     <% end %>
+    <li><%= link_to "My surveys", surveys_path %></li>
     <li><%= link_to "My account", edit_user_registration_path %></li>
     <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
   <% else %>
@@ -12,3 +13,5 @@
     <li><%= link_to "Sign in", new_user_session_path %></li>
   <% end %>
 </ul>
+
+<hr>
