--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -15,8 +15,8 @@
     <p><%= question.text %></p>
 
     <%= form.fields_for :answers do |answer_form| %>
-      <%= answer_form.label :raw, "Your answer" %>
-      <%= answer_form.text_field :raw %>
+      <%= answer_form.collection_radio_buttons :raw, [["Strongly Disagree", "Strongly Disagree"], ["Disagree", "Disagree"], ["Neutral", "Neutral"], ["Agree", "Agree"], ["Strongly Agree", "Strongly Agree"]], :last, :first, checked: answer_form.object.raw %>
+
       <%= answer_form.hidden_field :answerable_type, value: question.class.name %>
       <%= answer_form.hidden_field :answerable_id, value: question.id %>
     <% end %>
