--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -13,7 +13,7 @@
 
 
   <% questions.each do |question| %>
-    <p><%= question.text %></p>
+    <h3><%= question.text %></h3>
 
     <%= form.fields_for :answers do |answer_form| %>
       <%= answer_form.collection_radio_buttons :raw, scale_options_for_answers, :last, :first, checked: answer_form.object.raw %>
