--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -3,4 +3,10 @@
 <p>
   <strong>ip address:</strong>
   <%= @response.ip_address %>
+  <strong>x_axis_scaled:</strong>
+  <%= @response.x_axis_scaled %>
+  <strong>y_axis_scaled:</strong>
+  <%= @response.y_axis_scaled %>
+  <strong>z_axis_scaled:</strong>
+  <%= @response.z_axis_scaled %>
 </p>
