Massive progress and breakthrough still need to refactor code

--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -9,4 +9,6 @@
   <%= @response.y_axis_scaled %>
   <strong>z_axis_scaled:</strong>
   <%= @response.z_axis_scaled %>
+  <strong>classification:</strong>
+  <%= @response.classification.name %>
 </p>
