--- a/app/views/demographic_questions/_form.html.erb
+++ b/app/views/demographic_questions/_form.html.erb
@@ -11,10 +11,14 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :text %>
-    <%= form.text_field :text, id: :demographic_question_text %>
-  </div>
+  <% I18n.available_locales.each do |locale| %>
+    <h1><%= locale %></h1>
+    <%= form.globalize_fields_for locale do |ff| %>
+      <p>
+      <%= ff.text_field :text %>
+      </p>
+    <% end %>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
