--- a/app/views/demographic_questions/show.html.erb
+++ b/app/views/demographic_questions/show.html.erb
@@ -1,9 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @demographic_question.text %>
-</p>
+<% I18n.available_locales.each do |locale| %>
+  <h1><%= locale %></h1>
+  <% I18n.locale = locale %>
+  <p>
+    <strong>Text:</strong>
+    <%= @demographic_question.text %>
+  </p>
+<% end %>
 
 <%= link_to 'Edit', edit_demographic_question_path(@demographic_question) %> |
 <%= link_to 'Back', demographic_questions_path %>
