--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @question.text %>
-</p>
+<% I18n.available_locales.each do |locale| %>
+  <h1><%= locale %></h1>
+  <% I18n.locale = locale %>
+  <p>
+    <strong>Text:</strong>
+    <%= @question.text %>
+  </p>
+<% end %>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
