Added languages menu

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="float-left">
   <% if user_signed_in? %>
     <li>Hello <%= current_user.username %>!</li>
     <% if current_user.admin? %>
