Display the language of a response on the show page

--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -3,6 +3,10 @@
   <%= @response.ip_address %>
 </p>
 
+<strong>language:</strong>
+<%= @response.language %>
+</p>
+
 <% @response.answers.each do |answer| %>
   <h3><%= answer.question.text %></h3>
   <%= answer.raw %>
