--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :description %>
+    <%= form.text_field :description, id: :survey_name %>
+  </div>
+
+  <div class="field">
     <%= form.label :published %>
     <%= form.check_box :published, id: :survey_published %>
   </div>
