--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,11 @@
 <h1><%= @survey.name %></h1>
 
 <p>
+  <strong>Description:</strong>
+  <%= @survey.description %>
+</p>
+
+<p>
   <strong>Published:</strong>
   <%= @survey.published %>
 </p>
