--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_field :description, id: :survey_name %>
+    <%= form.text_field :description, id: :survey_description %>
   </div>
 
   <div class="field">
