Updated show page to reflect new score namings

--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -3,12 +3,24 @@
 <p>
   <strong>ip address:</strong>
   <%= @response.ip_address %>
-  <strong>x_axis_scaled:</strong>
-  <%= @response.x_axis_scaled %>
-  <strong>y_axis_scaled:</strong>
-  <%= @response.y_axis_scaled %>
-  <strong>z_axis_scaled:</strong>
-  <%= @response.z_axis_scaled %>
+</p>
+
+<p>
+  <strong>x_score:</strong>
+  <%= @response.x_score %>
+</p>
+
+<p>
+  <strong>y_score:</strong>
+  <%= @response.y_score %>
+</p>
+
+<p>
+  <strong>z_score:</strong>
+  <%= @response.z_score %>
+</p>
+
+<p>
   <strong>classification:</strong>
   <%= @response.classification.name %>
 </p>
