--- a/app/views/classifications/_form.html.erb
+++ b/app/views/classifications/_form.html.erb
@@ -11,20 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :classification_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :classification_description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :results_description %>
-    <%= form.text_area :results_description, id: :classification_results_description %>
-  </div>
+  <% I18n.available_locales.each do |locale| %>
+    <h1><%= locale %></h1>
+    <%= form.globalize_fields_for locale do |ff| %>
+      <p>
+        <%= form.label :name %>
+        <%= ff.text_field :name, id: :classification_name %>
+        <%= form.label :description %>
+        <%= ff.text_area :description, id: :classification_description %>
+        <%= form.label :results_description %>
+        <%= ff.text_area :results_description, id: :classification_results_description %>
+      </p>
+    <% end %>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
