--- a/app/views/demographic_questions/_form.html.erb
+++ b/app/views/demographic_questions/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :question_type %>
+    <%= form.collection_select :question_type, demographic_question_types, :to_s, :to_s, prompt: true %>
+  </div>
+
   <% I18n.available_locales.each do |locale| %>
     <h1><%= locale %></h1>
     <%= form.globalize_fields_for locale do |ff| %>
