--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -12,11 +12,24 @@
   <% end %>
 
   <%= form.fields_for :answers do |answer_form| %>
-    <h3><%= answer_form.object.question.text %></h3>
-    <p><%= answer_form.collection_radio_buttons :raw, scale_options_for_answers, :to_s, :to_s, checked: answer_form.object.raw %></p>
-    <%= answer_form.hidden_field :answerable_type, value: answer_form.object.question.class.name %>
-    <%= answer_form.hidden_field :answerable_id, value: answer_form.object.question.id %>
+    <% if answer_form.object.question.class.name == "Question" %>
+      <h3><%= answer_form.object.question.text %></h3>
+      <p><%= answer_form.collection_radio_buttons :raw, scale_options_for_answers, :to_s, :to_s, checked: answer_form.object.raw %></p>
+      <%= answer_form.hidden_field :answerable_type, value: answer_form.object.question.class.name %>
+      <%= answer_form.hidden_field :answerable_id, value: answer_form.object.question.id %>
+    <% else %>
+      <%= answer_form.object.inspect%>
+      <%= answer_form.index %>
+      <%= react_component "TextQuestion", {
+        question: answer_form.object.question,
+        model: "response",
+        attribute: "answers_attributes",
+        index: answer_form.index,
+        field: "raw"
+      } %>
+    <% end %>
   <% end %>
+
 
   <div class="actions">
     <%= form.submit %>
