--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -18,9 +18,7 @@
       <%= answer_form.hidden_field :answerable_type, value: answer_form.object.question.class.name %>
       <%= answer_form.hidden_field :answerable_id, value: answer_form.object.question.id %>
     <% else %>
-      <%= answer_form.object.inspect%>
-      <%= answer_form.index %>
-      <%= react_component "RadioQuestion", {
+      <%= react_component "DemographicQuestion", {
         question: answer_form.object.question,
         model: "response",
         attribute: "answers_attributes",
