--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -23,6 +23,22 @@
     <% end %>
   <% end %>
 
+  <h3>Customised Questions</h3>
+  <hr>
+
+  <%= form.fields_for :customised_questions do |customised_questions_form| %>
+    <p>
+      <%= customised_questions_form.label :demographic_question_id %>
+      <%= customised_questions_form.collection_select :demographic_question_id, DemographicQuestion.all, :id, :text %>
+    </p>
+
+    <p>
+      <%= customised_questions_form.label :text %>
+      <%= customised_questions_form.text_field :text %>
+    </p>
+  <% end %>
+
+
   <div class="field">
     <%= form.label :published %>
     <%= form.check_box :published, id: :survey_published %>
