--- a/app/views/surveys/_customised_questions_table.html.erb
+++ b/app/views/surveys/_customised_questions_table.html.erb
@@ -1,3 +1,5 @@
+<h2>Customised Questions</h2>
+
 <% if survey.customised_questions.any? %>
   <ul>
     <% survey.customised_questions.each do |customised_question| %>
