Fixed issue with setting custom options for custom questions on a per survey basis

--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -36,7 +36,7 @@
         model: "response",
         attribute: "answers_attributes",
         index: answer_form.index,
-        options: answer_form.object.question.demographic_question.options,
+        options: answer_form.object.question.options,
         field: "raw"
       } %>
     <% end %>
