--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -9,5 +9,13 @@
     <%= f.text_field :text %>
   </p>
 
+  <div class="field">
+    <%= f.fields_for :options do |options_form| %>
+      <%= render partial: 'surveys/option_fields', locals: {f: options_form} %>
+    <% end %>
+
+    <%= link_to_add_association 'Add Option', f, :options %>
+  </div>
+
   <%= link_to_remove_association "Remove Custom Question", f, {class: "button"} %>
 </div>
