--- a/app/views/responses/_form.html.erb
+++ b/app/views/responses/_form.html.erb
@@ -14,7 +14,7 @@
   <%= form.fields_for :answers do |answer_form| %>
     <% if answer_form.object.question.class.name == "Question" %>
       <h3><%= answer_form.object.question.text %></h3>
-      <p><%= answer_form.collection_radio_buttons :raw, scale_options_for_answers, :to_s, :to_s, checked: answer_form.object.raw %></p>
+      <p><%= answer_form.collection_radio_buttons :raw, scale_options_for_answers, :to_s, :to_s, { checked: answer_form.object.raw, required: true } %></p>
       <%= answer_form.hidden_field :answerable_type, value: answer_form.object.question.class.name %>
       <%= answer_form.hidden_field :answerable_id, value: answer_form.object.question.id %>
     <% else answer_form.object.question.class.name == "DemographicQuestion" %>
