Can remove custom questions and options

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -15,9 +15,9 @@
     <h1><%= locale %></h1>
     <%= form.globalize_fields_for locale do |ff| %>
       <p>
-        <%= form.label :name %>
+        <%= ff.label :name %>
         <%= ff.text_field :name, id: :survey_name %>
-        <%= form.label :description %>
+        <%= ff.label :description %>
         <%= ff.text_area :description, id: :survey_description %>
       </p>
     <% end %>
