--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -1,21 +1,25 @@
 <div class="nested-fields">
-  <p>
-    <%= f.label :demographic_question_id %>
-    <%= f.collection_select :demographic_question_id, @customisable_questions, :id, :text %>
-  </p>
+  <div class="field">
+    <p>
+      <%= f.label :demographic_question_id %>
+      <%= f.collection_select :demographic_question_id, @customisable_questions, :id, :text %>
+    </p>
+  </div>
 
-  <p>
-    <%= f.label :text %>
-    <%= f.text_field :text %>
-  </p>
+  <div class="field">
+    <p>
+      <%= f.label :text %>
+      <%= f.text_field :text %>
+    </p>
+  </div>
 
   <div class="field">
     <%= f.fields_for :options do |options_form| %>
       <%= render partial: 'surveys/option_fields', locals: {f: options_form} %>
     <% end %>
-
-    <%= link_to_add_association 'Add Option', f, :options %>
   </div>
+
+  <%= link_to_add_association 'Add Option', f, :options %>
 
   <%= link_to_remove_association "Remove Custom Question", f, {class: "button"} %>
 </div>
