--- a/app/views/surveys/_option_fields.html.erb
+++ b/app/views/surveys/_option_fields.html.erb
@@ -1,8 +1,10 @@
 <div class="nested-fields">
-  <p>
-    <%= f.label :text, "Option Text" %>
-    <%= f.text_field :text %>
-  </p>
+  <div class="field">
+    <p>
+      <%= f.label :text, "Option Text" %>
+      <%= f.text_field :text %>
+    </p>
+  </div>
 
   <%= link_to_remove_association "Remove Option", f, {class: "button"} %>
 </div>
