Fixed mailer issues

--- a/app/views/notification_mailer/csv_exported.html.erb
+++ b/app/views/notification_mailer/csv_exported.html.erb
@@ -1,1 +1,3 @@
 Your CSV has finished exporting, to download the file, please click <%= link_to "here", File.join(root_url, "csv_exports", @file.basename) %>
+
+(Please note that the CSV uses semicolons as a separator due to the nature of potential commas in the responses)
