--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,8 +5,9 @@
     <tr>
       <th>Username</th>
       <th>Organisation Name</th>
-      <th>Email</h3>
-      <th>Admin</h3>
+      <th>Email</th>
+      <th>No of Surveys</th>
+      <th>Admin</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,8 +18,9 @@
         <td><%= user.username %></td>
         <td><%= user.organisation_name %></td>
         <td><%= user.email %></td>
+        <td><%= user.surveys.count %></td>
         <td><%= user.admin? %></td>
-        <td><%= link_to 'Show', admin_user_path(user) %></td>
+        <td><%= link_to 'Surveys', surveys_path(user: user.id) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Delete', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure you want to permanently delete this user?' } %></td>
       </tr>
