--- a/app/views/global/_topbar.html.erb
+++ b/app/views/global/_topbar.html.erb
@@ -9,6 +9,7 @@
         <li><%= link_to "Questions", questions_path %></li>
         <li><%= link_to "Demographic questions", demographic_questions_path %></li>
         <li><%= link_to "Classifications", classifications_path %></li>
+        <li><%= link_to "Users", admin_users_path %></li>
       <% end %>
       <li><%= link_to "My account", edit_user_registration_path %></li>
       <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
