--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Locked:</strong>
+  <%= @survey.locked %>
+</p>
+
+<p>
   <strong>User:</strong>
   <%= @survey.user.email %> (<%= @survey.user.organisation_name %>)
 </p>
