Added admin response pages

--- a/app/views/global_public/_topbar.html.erb
+++ b/app/views/global_public/_topbar.html.erb
@@ -1,6 +1,6 @@
 <div class="topbar--public gutters">
   <div class="topbar__content flex flex-v-center flex-h-between">
-    <%= link_to '', '/', title: 'gofox', class: 'logo--foc' %>
+    <%= link_to '', root_path, title: 'gofox', class: 'logo--foc' %>
 
     <ul class="nav--secondary ul-inline">
       <% if user_signed_in? %>
