Initial work to fix the sign up bug

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
 
         <slide :last="true">
           <div class="field">
-            <%= f.collection_radio_buttons :use_type, User.use_types, :second, :first %>
+            <%= f.collection_radio_buttons :use_type, User.use_types, :first, :first %>
           </div>
 
           <div class="field">
