--- a/app/views/global_public/_footer.html.erb
+++ b/app/views/global_public/_footer.html.erb
@@ -6,14 +6,14 @@
         <li class="nav__li"><%= link_to 'Home', root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'About the Debate', '#TODO', title: 'About the Debate', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'About the Project', '#TODO', title: 'About the Project', class: 'nav__a' %></li>
-        <li class="nav__li"><%= link_to 'Legal', '#TODO', title: 'Legal', class: 'nav__a' %></li>
+        <li class="nav__li"><%= link_to 'Legal', legal_path, title: 'Legal', class: 'nav__a' %></li>
       </ul>
 
       <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
 
       <div class="footer__login">
         <span>(Log in for GoFox)</span>
-        
+
         <% if user_signed_in? %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'button--log-in' %>
         <% else %>
