Initial support for a master survey

--- a/app/views/global_public/_cta.html.erb
+++ b/app/views/global_public/_cta.html.erb
@@ -2,6 +2,6 @@
   <div class="container--public-small">
     <h3>Next Steps</h3>
     <p>We plan to use the data to establish whether there are any factors (such as nationality, educational background, or experience of different ecosystems) that explain some of the variation in the views held by conservationists.</p>
-    <%= link_to 'Take the survey', '#TODO', title: 'Take the survey', class: 'button--blue-shadow' %>
+    <%= link_to 'Take the survey', new_survey_response_path(Survey.master_survey), title: 'Take the survey', class: 'button--blue-shadow' %>
   </div>
 </div>
