--- a/app/views/global_admin/_topbar.html.erb
+++ b/app/views/global_admin/_topbar.html.erb
@@ -1,5 +1,5 @@
 <div class="topbar--admin gutters flex flex-v-center flex-h-between">
-  <%= link_to root_path, title: 'gofox' do %>
+  <%= link_to admin_root_path, title: 'gofox' do %>
     <%= image_tag 'logos/logo-gofox.svg', alt: 'gofox logo', width: '113px', height: '51px' %>
   <% end %>
 
