--- a/app/views/global_public/_footer.html.erb
+++ b/app/views/global_public/_footer.html.erb
@@ -4,8 +4,8 @@
     <div class="footer__content flex flex-v-center flex-h-between">
       <ul class="nav--footer ul-unstyled flex flex-wrap">
         <li class="nav__li"><%= link_to 'Home', root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
-        <li class="nav__li"><%= link_to 'About the Debate', '#TODO', title: 'About the Debate', class: 'nav__a' %></li>
-        <li class="nav__li"><%= link_to 'About the Project', '#TODO', title: 'About the Project', class: 'nav__a' %></li>
+        <li class="nav__li"><%= link_to 'About the Debate', about_the_debate_path, title: 'About the Debate', class: 'nav__a' %></li>
+        <li class="nav__li"><%= link_to 'About the Project', about_the_project_path, title: 'About the Project', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Legal', legal_path, title: 'Legal', class: 'nav__a' %></li>
       </ul>
 
