Improvements to the admin footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <div id="v-app">
       <%= yield %>
     </div>
-    <% if current_user %>
+    <% if current_user&.admin? %>
       <%= render 'global_admin/footer' %>
     <% else %>
       <%= render 'global_public/footer' %>
