--- a/app/views/global_admin/_footer.html.erb
+++ b/app/views/global_admin/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer--admin flex flex-v-center">
+<footer class="footer--public flex flex-v-center">
   <div class="container--public">
 
     <div class="footer__content flex flex-v-center flex-h-between">
@@ -7,8 +7,11 @@
         <li class="nav__li"><%= link_to 'Support', admin_support_path, title: 'About the Debate', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Legal', admin_legal_path, title: 'Legal', class: 'nav__a' %></li>
       </ul>
-    </div>
-  </div>
 
-  <p class="no-margin">&copy; Copyright <%= Date.today.year %></p>
+      <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
+    </div>
+
+    <p class="footer__copyright no-margin">&copy; Copyright <%= Date.today.year %> GoFox</p>
+
+  </div>
 </footer>
