--- a/app/views/global_admin/_footer.html.erb
+++ b/app/views/global_admin/_footer.html.erb
@@ -3,7 +3,7 @@
 
     <div class="footer__content flex flex-v-center flex-h-between">
       <ul class="nav--footer ul-unstyled flex flex-wrap">
-        <li class="nav__li"><%= link_to 'Home', admin_root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
+        <li class="nav__li"><%= link_to 'Home', root_path, title: 'Future of Conservation', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Support', admin_support_path, title: 'About the Debate', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Legal', admin_legal_path, title: 'Legal', class: 'nav__a' %></li>
       </ul>
