--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,10 @@
         </slide>
 
         <slide :last="true">
+          <p>In this section we ask questions about the group/organisation that you,
+            the survey administrator, belong to. This may be different from groups/organisations
+            with which you will use the tool. We will ask you for details of those users when you
+            create a survey.</p>
           <div class="field">
             <%= f.collection_radio_buttons :use_type, User.use_types, :first, :first %>
           </div>
