Fix user category to be one of three options

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -20,12 +20,13 @@
               <i class="table__heading-0 material-icons table__icon">person</i>
               <p class="table__heading-1">
                 <% if user.admin? %>
-                (A)
-                <% end %>
-                <% if user.use_type == "organisational" %>
-                (O)
-                <% elsif user.use_type == "educational" %>
-                (E)
+                  (A)
+                <% else %>
+                  <% if user.use_type == "organisational" %>
+                    (O)
+                  <% elsif user.use_type == "educational" %>
+                    (E)
+                  <% end %>
                 <% end %>
                 <%= user.username %>
               </p>
