Work in progress for educational fields and allow csv user download to admin only

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -5,3 +5,19 @@
 <p>
   What would you like to call your survey?
 </p>
+
+<p>
+  If this is a follow up to a previous GO-FOX survey, please enter the original survey ID:
+</p>
+
+<p>
+  What is the language of your survey?
+</p>
+
+<p>
+  Please upload a logo for your survey:
+</p>
+
+<p>
+  What is the name of the group/organisation to which the survey participants belong?
+</p>
