Add to be determined for the classification on the results page

--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -31,6 +31,7 @@
       <p>
         <strong>classification:</strong>
         <%= @response.classification.name %>
+         (To Be Determined)
       </p>
     </div>
 
